Add basic layout

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Knights Travails</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>Knights Travails</h1>
+      <div id="boardContainer">
+        <div id="buttons">
+          <button id="start">Start</button>
+          <button id="target">Target</button>
+          <button id="travail">Travail</button>
+          <button id="reset">Reset</button>
+        </div>
+        <div id="chessboard"></div>
+      </div>
+    </main>
+  </body>
 </html>
