--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
           <button id="target">Target</button>
           <button id="travail">Travail</button>
           <button id="reset">Reset</button>
+          <div id="coordinateDisplay">
+            <p>Moving from</p>
+            <div class="coordinates">
+              <span id="startCoordinates">[x, y]</span>
+              <span>=></span>
+              <span id="targetCoordinates">[x, y]</span>
+            </div>
+          </div>
         </div>
         <div id="chessboard"></div>
       </div>
