Handle edge cases for resetting and travailing

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
           <div id="coordinateDisplay">
             <p>Moving from</p>
             <div class="coordinates">
-              <span id="startCoordinates">[x, y]</span>
+              <span id="startCoordinates">[x,y]</span>
               <span>=></span>
-              <span id="targetCoordinates">[x, y]</span>
+              <span id="targetCoordinates">[x,y]</span>
+              <ol id="coordinatePath">
+              </ul>
             </div>
           </div>
         </div>
