Fix closing tag error

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
               <span id="startCoordinates">[x,y]</span>
               <span>=></span>
               <span id="targetCoordinates">[x,y]</span>
-              <ol id="coordinatePath">
-              </ul>
+              <ol id="coordinatePath"></ol>
             </div>
           </div>
         </div>
