--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <div id="coordinateDisplay">
             <p>Moving from</p>
             <div class="coordinates">
-              <span id="startCoordinates">[x,y]</span>
+              <span id="startCoordinates">a1</span>
               <span>=></span>
-              <span id="targetCoordinates">[x,y]</span>
+              <span id="targetCoordinates">a1</span>
               <ol id="coordinatePath"></ol>
             </div>
           </div>
