--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <button id="travail">Travail</button>
           <button id="reset">Reset</button>
           <div id="coordinateDisplay">
-            <p>Moving from</p>
+            <p>Moving from:</p>
             <div class="coordinates">
               <span id="startCoordinates">xy</span>
               <span>=></span>
